--- a/test.html
+++ b/test.html
@@ -1,68 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XO Motion 3D</title>
+  <title>كرة أرضية Three.js بدون Live Server</title>
   <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(to bottom, #2c1230, #061830, #fff8f0);
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .scene {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      perspective: 1000px;
-    }
-
-    .shape {
-      position: absolute;
-      font-size: 8rem;
-      font-weight: bold;
-      transform-style: preserve-3d;
-      transition: transform 0.15s linear;
-      user-select: none;
-    }
-
-    /* تأثير 3D */
-    .x {
-      color: #ff3b3b;
-      text-shadow: 
-        2px 2px 4px rgba(0,0,0,0.3),
-        -2px -2px 4px rgba(255,255,255,0.4),
-        0 8px 20px rgba(255,0,0,0.6);
-    }
-
-    .o {
-      color: #2e8bff;
-      text-shadow: 
-        2px 2px 4px rgba(0,0,0,0.3),
-        -2px -2px 4px rgba(255,255,255,0.4),
-        0 8px 20px rgba(0,100,255,0.6);
-    }
-
-    /* مواقع أولية */
-    .x1 { top: 10%; right: 20%; transform: rotate(20deg); }
-    .o1 { top: 40%; left: 45%; }
-    .x2 { bottom: 10%; left: 25%; transform: rotate(-30deg); }
+    body { margin:0; overflow:hidden; background:#000; }
   </style>
 </head>
 <body>
-  <div class="scene">
-    <div class="shape x x1">X</div>
-    <div class="shape o o1">O</div>
-    <div class="shape x x2">X</div>
-  </div>
+<script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
+<script>
+  // مشهد وكاميرا و Renderer
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 100);
+  camera.position.set(0,0,3);
 
-  <script>
-   
-  </script>
+  const renderer = new THREE.WebGLRenderer({antialias:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  // إضاءة
+  const light = new THREE.DirectionalLight(0xffffff, 1);
+  light.position.set(5,5,5);
+  scene.add(light);
+  scene.add(new THREE.AmbientLight(0xffffff, 0.3));
+
+  // الكرة الأرضية
+  const loader = new THREE.TextureLoader();
+  const texture = loader.load('https://threejs.org/examples/textures/land_ocean_ice_cloud_2048.jpg');
+  const geometry = new THREE.SphereGeometry(1, 64, 64);
+  const material = new THREE.MeshPhongMaterial({map: texture});
+  const earth = new THREE.Mesh(geometry, material);
+  scene.add(earth);
+
+  // دوران تلقائي
+  function animate() {
+    requestAnimationFrame(animate);
+    earth.rotation.y += 0.0015;
+    renderer.render(scene, camera);
+  }
+  animate();
+
+  // تكيف مع حجم الشاشة
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
+</script>
 </body>
 </html>
