--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
               <img src="images/Say2buy.jpg" alt="project2" />
               <h4>Say2Bay Platform</h4>
               <p>
-                Vivamus eleifend convallis ante, non pharetra libero molestie
-                laoreet. Donec id imperdiet lacus.
+                Pay easily and securely with your voice.
               </p>
             </div> 
             
@@ -232,8 +231,7 @@
               <img src="images/La.png" alt="project3" />
               <h4>Libroloop Virtual Librarye</h4>
               <p>
-                Vivamus eleifend convallis ante, non pharetra libero molestie
-                laoreet. Donec id imperdiet lacus.
+                Read anything, anytime, from anywhere.
               </p>
             </div>
 
@@ -257,8 +255,7 @@
               <img src="images/skyCue.jpeg" alt="project4" />
               <h4>SkyCue- Your Guide to Space and Earth </h4>
               <p>
-              Vivamus eleifend convallis ante, non pharetra libero molestie
-                laoreet. Donec id imperdiet lacus.
+             Where weather, space, and farming meet ,powered by NASA’s data.
               </p>
             </div>
             
