--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container2">
       <nav>
         <div class="div1">
-          <img src="images/xoteam.png" alt="" loading="lazy" />
+          <img src="images/2yRc2Ttw.png"  alt="" loading="lazy" />
           <h2 class="typing-text">XO For Software</h2>
         </div>
         <div class="div2">
@@ -47,9 +47,10 @@
             <button type="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_kvgcONeQyhylkIok7GcEfvlnJHTaGn_53lhlvUVNWXv9mw/viewform?usp=header ">Join Us</a></button>
           </div>
           <div class="right">
-            <img src="images/xoteam.png" alt="logo" loading="lazy" />
+            <img src="images/xoprofile.png" alt="logo" loading="lazy" />
           </div>
         </div>
+
         <div class="down">
           <div class="iconsLeft">
             <div class="shape x x1">X</div>
@@ -326,8 +327,8 @@
        
         <footer>
         <div class="onepart">
-          <img src="images/xoteam.png" alt="xo">
-          <h4>XO TEAM</h4>
+          <img src="images/xoprofile.png" alt="xo">
+          <h4>XO FOR SOFTWAER </h4>
         </div>
         <div class="twopart">
           <ul>
@@ -339,7 +340,7 @@
             <li><a href="">Contact</a></li>
           </ul>
         </div>
-        <div class="threepart"><h4>All Reserved © 2025 XO TEAM </h4></div>
+        <div class="threepart"><h4>All Reserved © 2025 Hashem Shatat and Partners (XO FOR SOFTWAER)</h4></div>
       </footer>
       </div>
       
